# models/article.go
@@ -40,9 +40,9 @@ type Article struct {
 	// Required: true
 	ID *uint64 `json:"id"`
 
-	// image Url
+	// image
 	// Required: true
-	ImageURL *string `json:"imageUrl"`
+	Image *string `json:"image"`
 
 	// tags
 	// Required: true
@@ -87,7 +87,7 @@ func (m *Article) Validate(formats strfmt.Registry) error {
 		res = append(res, err)
 	}
 
-	if err := m.validateImageURL(formats); err != nil {
+	if err := m.validateImage(formats); err != nil {
 		res = append(res, err)
 	}
 
@@ -171,9 +171,9 @@ func (m *Article) validateID(formats strfmt.Registry) error {
 	return nil
 }
 
-func (m *Article) validateImageURL(formats strfmt.Registry) error {
+func (m *Article) validateImage(formats strfmt.Registry) error {
 
-	if err := validate.Required("imageUrl", "body", m.ImageURL); err != nil {
+	if err := validate.Required("image", "body", m.Image); err != nil {
 		return err
 	}
 
