# models/profile.go
@@ -26,9 +26,9 @@ type Profile struct {
 	// Required: true
 	ID *uint64 `json:"id"`
 
-	// image Url
+	// image
 	// Required: true
-	ImageURL *string `json:"imageUrl"`
+	Image *string `json:"image"`
 
 	// name
 	// Required: true
@@ -61,7 +61,7 @@ func (m *Profile) Validate(formats strfmt.Registry) error {
 		res = append(res, err)
 	}
 
-	if err := m.validateImageURL(formats); err != nil {
+	if err := m.validateImage(formats); err != nil {
 		res = append(res, err)
 	}
 
@@ -109,9 +109,9 @@ func (m *Profile) validateID(formats strfmt.Registry) error {
 	return nil
 }
 
-func (m *Profile) validateImageURL(formats strfmt.Registry) error {
+func (m *Profile) validateImage(formats strfmt.Registry) error {
 
-	if err := validate.Required("imageUrl", "body", m.ImageURL); err != nil {
+	if err := validate.Required("image", "body", m.Image); err != nil {
 		return err
 	}
 
