# models/profile_full.go
@@ -29,9 +29,9 @@ type ProfileFull struct {
 	// Required: true
 	ID *uint64 `json:"id"`
 
-	// image Url
+	// image
 	// Required: true
-	ImageURL *string `json:"imageUrl"`
+	Image *string `json:"image"`
 
 	// member
 	// Required: true
@@ -72,7 +72,7 @@ func (m *ProfileFull) Validate(formats strfmt.Registry) error {
 		res = append(res, err)
 	}
 
-	if err := m.validateImageURL(formats); err != nil {
+	if err := m.validateImage(formats); err != nil {
 		res = append(res, err)
 	}
 
@@ -129,9 +129,9 @@ func (m *ProfileFull) validateID(formats strfmt.Registry) error {
 	return nil
 }
 
-func (m *ProfileFull) validateImageURL(formats strfmt.Registry) error {
+func (m *ProfileFull) validateImage(formats strfmt.Registry) error {
 
-	if err := validate.Required("imageUrl", "body", m.ImageURL); err != nil {
+	if err := validate.Required("image", "body", m.Image); err != nil {
 		return err
 	}
 
